# git-practice

./: README.md  pyproject.toml
git_practice/: hex2dec.py
tests/: test_hex2dec.py
