[tool.poetry]
name = "git-practice"
version = "0.1.0"
description = ""
authors = ["An Nyeong <me@annyeong.me>", "Heewon Jeong"]
readme = "README.md"
packages = [{include = "git_practice"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
